--- a/06.JS_Front-End/06.01.HTML_&_CSS/06.01.01.Lab/06.01.01.09.Responsive_Web_Design/05_Media-Feature-Orientation/responsive.css
+++ b/06.JS_Front-End/06.01.HTML_&_CSS/06.01.01.Lab/06.01.01.09.Responsive_Web_Design/05_Media-Feature-Orientation/responsive.css
@@ -12,3 +12,15 @@ div {
   font-weight: bold;
   text-align: center;
 }
+
+@media (orientation: landscape) {
+  body {
+
+  }
+}
+
+@media (orientation: portrait) {
+  body {
+    flex-direction: column;
+  }
+}
