--- a/06.JS_Front-End/06.01.HTML_&_CSS/06.01.03.Exam_Prep/2023.12.13.Retake_Exam/01.Wiki-US_Resources/styles.css
+++ b/06.JS_Front-End/06.01.HTML_&_CSS/06.01.03.Exam_Prep/2023.12.13.Retake_Exam/01.Wiki-US_Resources/styles.css
@@ -1,118 +1,113 @@
+@import url("https://fonts.googleapis.com/css2?family=Agbalumo&family=Roboto:wght@100&display=swap");
+
 * {
+    font-family: 'Agbalumo', serif;
+
     margin: 0;
     padding: 0;
+
     box-sizing: border-box;
 }
 
 body {
-    font-family: 'Agbalumo', sans-serif;
-    font-style: italic;
-
-    display: flex;
-    flex-direction: column;
-
-    width: 100vw;
-}
-
-header {
-    flex: 0 0 90%;
-
-    background-color: lightcyan;
-}
-
-header .site-title{
-    text-align: center;
-    border-bottom:2px solid black;
-    font-size: 2em;
-    margin: 1em 1em 0 1em;
-}
-
-header .site-sub-title{
-    text-align: center;
-    border-bottom:2px solid black;
-    margin: 0 2em;
+    padding: 40px;
 }
 
 main {
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    gap: 2em;
+    border: 3px solid black;
 
-    padding: 2em;
-
-    text-indent: 2em;
-}
-
-main aside {
-    flex: 0 0 calc(40% - 2em);
+    width: 900px;
+    margin: 0 auto;
 
     display: flex;
     flex-direction: column;
-    align-items: center;
-
-    border: 1px solid black;
-    max-width: 40vw;
-
-    padding: 1em;
-    margin: 1em;
 }
 
-main aside img {
-    max-width: 100%;
-    height: auto;
-    text-align: center;
-
-    margin-bottom: 2em;
-}
-
-main section p{
-    flex: 0 0 60%;
-
-    margin-bottom: 2em;
-}
-
-footer {
+header {
     display: flex;
     flex-direction: column;
+    align-items: center;
 
     background-color: lightcyan;
 }
 
-footer .footer-container {
+header h1 {
+    width: 90%;
+    padding-top: 1em;
+    border-bottom: 3px solid black;
+
+    text-align: center;
+    font-size: 3em;
+}
+
+header p {
+    width: 90%;
+    border-bottom: 3px solid black;
+
+    text-align: center;
+    font-size: 1.5em;
+}
+
+.article-description {
+    display: flex;
+    flex-wrap: wrap;
+
+    margin: 2em;
+}
+
+.article-description .photo {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    flex-basis: calc(30% - 2em);
+
+    box-sizing: border-box;
+    border: 3px solid black;
+}
+
+.article-description .photo img {
+    width: 360px;
+    padding: 1em;
+}
+
+.article-description .photo p {
+    padding: 1em;
+
+    text-indent: 2em;
+    font-size: 0.75em;
+}
+
+.article-description .description {
+    box-sizing: border-box;
+
+    margin: 1em;
+
+    flex-basis: calc(60% - 4em);
+}
+
+.article-description .description p {
+    padding: 1em;
+    text-indent: 2em;
+}
+
+.facts {
     display: flex;
     flex-direction: column;
 }
 
-footer .footer-title {
-    display: flex;
-    justify-content: flex-start;
+.facts h2 {
+    color: white;
+    background-color: black;
+    width: 50%;
 
     text-align: center;
-    font-size: 1.5em;
-    font-weight: bold;
-
-    position: relative;
 }
 
-footer .title-background {
-    flex: 0 0 45%;
-
-    background-color: black;
-    color: white;
-    padding: 1em;
-
-    z-index: 1;
+.facts div {
+    background-color: lightcyan;
+    padding: 1em 0 0.2em 1.5em;
 }
-
-footer .title-background-white {
-    flex: 1; /* Take up the remaining space */
-    background-color: white;
+.facts div p {
+    padding: 0.5em;
 }
-
-
-footer .info {
-    margin: 1.5em 2em 0.5em 2em;
-}
-
-
