--- a/07.Python_Web/07.01.Django_Basics/07.01.01.Labs/forumApp/templates/base.html
+++ b/07.Python_Web/07.01.Django_Basics/07.01.01.Labs/forumApp/templates/base.html
@@ -4,59 +4,83 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forum Posts</title>
-    <link rel="stylesheet" href="static/css/styles.css}">
+    <link rel="stylesheet" href="static/css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
           rel="stylesheet">
 </head>
 <body>
-    <h2>
-        How to display information (regular variables):
-    </h2>
-    <p>
-        The current time is: {{ current_time }}
-    </p>
-
-    <h2>
-        How to display information (dictionaries):
-    </h2>
-    <p>
-        Name: {{ person.name }}<br>
-        Age: {{ person.age }}<br>
-        Occupation: {{ person.occupation }}<br>
-    </p>
-
-    <h2>
-        How to display information (lists):
-    </h2>
-    <p>
-        ID No.0: {{ ids.0 }}<br>
-        ID No.1: {{ ids.1 }}<br>
-        ID No.2: {{ ids.2 }}<br>
-    </p>
-    
-    <h2>Using filters:</h2>
-    <p>
-        Original Text:<br> 
-        {{ some_text }}<br>
-        <br>
-        Filter the visible text to display only the first 20 chars <br>
-        {{ some_text|truncatechars:20 }}<br>
-        <br>
-        Filter the visible text to display only the first three words<br>
-        {{ some_text|truncatewords:3 }}<br>
-        <br>
-        Slugify the text and make it start with capital letter<br>
-        {{ some_text|slugify|capfirst }}
-    </p>
-    <h3>
-        'default' Filter:
-    </h3>
-    <p>
-        Original text is empty string: {{ empty_text }}<br>
-        'default' Filter: {{ empty_text|default:"'default' acts like .get() in Python" }}
-    </p>
+    {% include 'nav.html' %}
+    <h1>Hello, User!</h1>
 </body>
     <script src='https://unpkg.com/akar-icons-fonts'></script>
 </html>
+
+{# Body used for examples: #}
+{#<body>#}
+{#    <h2>#}
+{#        How to display information (regular variables):#}
+{#    </h2>#}
+{#    <p>#}
+{#        The current time is: {{ current_time }}#}
+{#    </p>#}
+{##}
+{#    <h2>#}
+{#        How to display information (dictionaries):#}
+{#    </h2>#}
+{#    <p>#}
+{#        Name: {{ person.name }}<br>#}
+{#        Age: {{ person.age }}<br>#}
+{#        Occupation: {{ person.occupation }}<br>#}
+{#    </p>#}
+{##}
+{#    <h2>#}
+{#        How to display information (lists):#}
+{#    </h2>#}
+{#    <p>#}
+{#        ID No.0: {{ ids.0 }}<br>#}
+{#        ID No.1: {{ ids.1 }}<br>#}
+{#        ID No.2: {{ ids.2 }}<br>#}
+{#    </p>#}
+{#    #}
+{#    <h2>Using filters:</h2>#}
+{#    <p>#}
+{#        Original Text:<br> #}
+{#        {{ some_text }}<br>#}
+{#        <br>#}
+{#        Filter the visible text to display only the first 20 chars <br>#}
+{#        {{ some_text|truncatechars:20 }}<br>#}
+{#        <br>#}
+{#        Filter the visible text to display only the first three words<br>#}
+{#        {{ some_text|truncatewords:3 }}<br>#}
+{#        <br>#}
+{#        Slugify the text and make it start with a capital letter<br>#}
+{#        {{ some_text|slugify|capfirst }}#}
+{#    </p>#}
+{#    <h3>#}
+{#        'default' Filter:#}
+{#    </h3>#}
+{#    <p>#}
+{#        Original text is empty string: {{ empty_text }}<br>#}
+{#        'default' Filter: {{ empty_text|default:"'default' acts like .get() in Python" }}#}
+{#    </p>#}
+{##}
+{#    <h2>Tags</h2>#}
+{#    <h3>If Statement</h3>#}
+{#    {% if some_text %}#}
+{#        <p>{{ some_text }}</p>#}
+{#    {% else %}#}
+{#        <p>{{ "No Results" }}</p>#}
+{#    {% endif %}#}
+{#    #}
+{#    <h3>(Un)Ordered List</h3>#}
+{#    <ul>#}
+{#        {% for user in users %}#}
+{#            <li>{{ user }}</li>#}
+{#        {% endfor %}#}
+{#    </ul>#}
+{##}
+{#    <h3>Lorem Ipsum</h3>#}
+{#    {% lorem 3 p %}#}
+{#</body>#}
