--- a/07.Python_Web/07.01.Django_Basics/07.01.01.Labs/forumApp/templates/base.html
+++ b/07.Python_Web/07.01.Django_Basics/07.01.01.Labs/forumApp/templates/base.html
@@ -1,10 +1,12 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forum Posts</title>
-    <link rel="stylesheet" href="static/css/styles.css">
+    <link rel="stylesheet" href={% static "css/styles.css" %}>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
@@ -13,6 +15,7 @@
 <body>
     {% include 'nav.html' %}
     <h1>Hello, User!</h1>
+
 </body>
     <script src='https://unpkg.com/akar-icons-fonts'></script>
 </html>
@@ -84,3 +87,10 @@
 {#    <h3>Lorem Ipsum</h3>#}
 {#    {% lorem 3 p %}#}
 {#</body>#}
+{##}
+{#<form method="post">#}
+{#        {% csrf_token %}#}
+{#        <button>#}
+{#            Button to check CSRF Token#}
+{#        </button>#}
+{#    </form>#}
