--- a/07.Python_Web/07.01.Django_Basics/07.01.01.Labs/forumApp/templates/base.html
+++ b/07.Python_Web/07.01.Django_Basics/07.01.01.Labs/forumApp/templates/base.html
@@ -19,6 +19,7 @@
 </html>
 
 
+
 {# Bodies used for examples: #}
 {#<body>#}
 {#    <h2>#}
@@ -95,14 +96,20 @@
 {#    </form>#}
 
 
-{#<body>#}
-{#    {% include 'nav.html' %}#}
-{#    <h1>Hello, User!</h1>#}
-{#    #}
+{#    <h1>Hello User</h1>#}
 {#    <form action="/" method="post">#}
-{#        {{ my_form }}#}
+{#        {{ my_form.person_name }}#}
+{#        {{ my_form.checkboxes }}#}
 {#        {{ my_form.errors }}#}
+{#        #}
 {#        {% csrf_token %}#}
 {#        <button>Submit</button>#}
 {#    </form>#}
-{#</body>#}
+{#    <form action="/" method="get">#}
+{#        {% csrf_token %}#}
+{#        <input type="text" maxlength="10" name="person_name">#}
+{#        <input type="number" name="age">#}
+{#        <button>Submit</button>#}
+{#        or#}
+{#        <input type="submit" value="Submit" />#}
+{#    </form>#}
