--- a/07.Python_Web/07.01.Django_Basics/07.01.01.Labs/forumApp/templates/posts/details-post.html
+++ b/07.Python_Web/07.01.Django_Basics/07.01.01.Labs/forumApp/templates/posts/details-post.html
@@ -32,7 +32,7 @@
                 <p>{{ post.content|markdown }}</p>  
             {% endif %}  
             <div class="post-meta">  
-                <span>Posted by {{ post.author|default:"Anonymous" }} on {{ post.created_at|date:"d-M-Y" }}</span>  
+                <span>Posted by {{ post.author|default:"anonymous" }} on {{ post.created_at|date:"d-M-Y" }}</span>  
             </div>  
         </div>  
     </div>
