--- a/07.Python_Web/07.01.Django_Basics/07.01.01.Labs/forumApp/templates/posts/dashboard.html
+++ b/07.Python_Web/07.01.Django_Basics/07.01.01.Labs/forumApp/templates/posts/dashboard.html
@@ -21,15 +21,17 @@
                 <a id="post-url" href="{% url 'details-post' post.pk %}">
                     <div class="post">
                         <h2>{{ post.title|capfirst }}</h2>
-                    
+                        
                         {% if not post.content %}
                             {% lorem 3 p %}
                         {% else %}
                             {{ post.content|markdown }}
                         {% endif %}
-                    
+                        
                         <div class="post-meta">
-                            <span>Posted by {{ post.author|default:"Anonymous" }} on {{ post.created_at|date:"d-M-Y" }}</span>
+                            <span>
+                                Posted by {{ post.author|default:"Anonymous" }} on {{ post.created_at|date:"d-M-Y" }}
+                            </span>
                         </div>
                     </div>
                 </a>
