--- a/07.Python_Web/07.01.Django_Basics/07.01.01.Labs/forumApp/templates/common/index.html
+++ b/07.Python_Web/07.01.Django_Basics/07.01.01.Labs/forumApp/templates/common/index.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{%  extends 'common/base.html' %}
 
-</body>
-</html>
+{% block content %}
+    <h1 style="color: #405cf5">
+        Hello, user!
+    </h1>
+{% endblock %}
