--- a/07.Python_Web/07.01.Django_Basics/07.01.01.Labs/forumApp/templates/common/base.html
+++ b/07.Python_Web/07.01.Django_Basics/07.01.01.Labs/forumApp/templates/common/base.html
@@ -1,4 +1,6 @@
 {% load static %}
+{% load current_time %}
+{% load user_info %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -18,9 +20,17 @@
 </head>
 <body>
     {% include 'common/nav.html' %}
+    <p>
+        Last Refresh: {% current_time %}
+    </p>
+    
     {% block content %}
         Demonstrates the inheritance of block content.
     {% endblock %}
+    
+    <div>
+        {% user_info request.user %}
+    </div>
 </body>
     <script src='https://unpkg.com/akar-icons-fonts'></script>
 </html>
