--- a/07.Python_Web/07.01.Django_Basics/07.01.01.Labs/forumApp/templates/common/index.html
+++ b/07.Python_Web/07.01.Django_Basics/07.01.01.Labs/forumApp/templates/common/index.html
@@ -1,7 +1,14 @@
 {%  extends 'common/base.html' %}
+{% load uppercase %}
 
 {% block content %}
-    <h1 style="color: #405cf5">
-        Hello, user!
-    </h1>
+    {% uppercase %}
+        <h1 style="color: #405cf5">
+            Hello, user!
+        </h1>
+        
+        <h2>
+            Welcome to the forumApp!
+        </h2>
+    {% enduppercase %}
 {% endblock %}
