--- a/07.Python_Web/07.01.Django_Basics/07.01.01.Labs/forumApp/templates/common/index.html
+++ b/07.Python_Web/07.01.Django_Basics/07.01.01.Labs/forumApp/templates/common/index.html
@@ -6,9 +6,8 @@
         <h1 style="color: #405cf5">
             Hello, user!
         </h1>
-        
-        <h2>
-            Welcome to the forumApp!
-        </h2>
+{#        <h2>#}
+{#            Welcome to the forumApp!#}
+{#        </h2>#}
     {% enduppercase %}
 {% endblock %}
