--- a/07.Python_Web/07.01.Django_Basics/07.01.01.Labs/forumApp/templates/common/base.html
+++ b/07.Python_Web/07.01.Django_Basics/07.01.01.Labs/forumApp/templates/common/base.html
@@ -10,6 +10,7 @@
     <title>Forum Posts</title>
     
     {% block styles %}
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     {% endblock %}
     
@@ -20,19 +21,32 @@
 </head>
 <body>
     {% include 'common/nav.html' %}
-    <p>
-        Last Refresh: {% current_time %}
-    </p>
     
-    {% block content %}
-        Demonstrates the inheritance of block content.
-    {% endblock %}
-    
-    <div>
-        {% user_info request.user %}
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-2 p-3">
+                <p> Last Refresh: {% current_time %}</p>
+            </div>
+            
+            <div class="col-md-8 py-4">
+                <div class="text-center">
+                    {% block content %}
+                        Demonstrates the inheritance of block content.
+                    {% endblock %}
+                </div>
+            </div>
+            
+            <div class="col-md-2 p-3 d-flex justify-content-end">
+                <div>
+                    {% user_info request.user %}
+                </div>
+            </div>
+        </div>
     </div>
 </body>
     <script src='https://unpkg.com/akar-icons-fonts'></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </html>
 
 
