Update forumApp, Forms Advanced

--- a/07.Python_Web/07.01.Django_Basics/07.01.01.Labs/forumApp/templates/common/index.html
+++ b/07.Python_Web/07.01.Django_Basics/07.01.01.Labs/forumApp/templates/common/index.html
@@ -10,4 +10,8 @@
 {#            Welcome to the forumApp!#}
 {#        </h2>#}
     {% enduppercase %}
+    
+    <form>
+        {{ my_form }}
+    </form>
 {% endblock %}
