Update forumApp, Forms Advanced

--- a/07.Python_Web/07.01.Django_Basics/07.01.01.Labs/forumApp/templates/common/index.html
+++ b/07.Python_Web/07.01.Django_Basics/07.01.01.Labs/forumApp/templates/common/index.html
@@ -1,4 +1,5 @@
 {%  extends 'common/base.html' %}
+{% load crispy_forms_tags %}
 {% load uppercase %}
 
 {% block content %}
@@ -6,12 +7,13 @@
         <h1 style="color: #405cf5">
             Hello, user!
         </h1>
-{#        <h2>#}
-{#            Welcome to the forumApp!#}
-{#        </h2>#}
     {% enduppercase %}
     
     <form>
         {{ my_form }}
+    </form>
+    
+    <form>
+        {% crispy my_form %}
     </form>
 {% endblock %}
