--- a/07.Python_Web/07.01.Django_Basics/07.01.01.Labs/forumApp/templates/posts/dashboard.html
+++ b/07.Python_Web/07.01.Django_Basics/07.01.01.Labs/forumApp/templates/posts/dashboard.html
@@ -16,7 +16,7 @@
                         {% if not post.content %}
                             {% lorem 3 p %}
                         {% else %}
-                            {{ post.content|markdown:"This is my custom param" }}
+                            {{ post.content|markdown}}
                         {% endif %}
 
                         <div class="post-meta">
