--- a/07.Python_Web/07.01.Django_Basics/07.01.01.Labs/forumApp/templates/posts/details-post.html
+++ b/07.Python_Web/07.01.Django_Basics/07.01.01.Labs/forumApp/templates/posts/details-post.html
@@ -16,6 +16,9 @@
     <div class="posts">  
         <div class="post">  
             <div class="header">  
+                {% if post.image %}
+                    <img src="{{ post.image.url }}" width="50" height="50" class="img-fluid">
+                {% endif %}
                 <h2>{{ post.title|capfirst }}</h2>  
                 <div class="icons">  
                     <a href="{% url 'edit-post' post.pk %}">  
@@ -35,6 +38,35 @@
                 <span>Posted by {{ post.author|default:"anonymous" }} on {{ post.created_at|date:"d-M-Y" }}</span>  
             </div>  
         </div>  
+        <form method="post" class="form-inline">
+            {% csrf_token %}
+            
+            {{ formset.management_form }}
+            
+            <div class="input-group">
+                {% for form in formset %}
+                    <div class="form-row">
+                        {{ form.author }}
+                        <div class="input-group-append">
+                            {{ form.content }}
+                            <button class="btn btn-primary ml-2" type="submit">Submit</button>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+        </form>
+        <div class="comments-section">
+            {% for comment in comments %}
+                <div class="media mb-e comment item">
+                    <img src="https://via.plaeholder.com/50" class="mr-3 rounded-circle comment-avatar">
+                </div>
+                <div class="media-body comment item">
+                    <h5 class="mt-0 comment-author">{{ comment.author }}</h5>
+                    <p class="comment-text">{{ comment.content }}</p>
+                </div>
+            {% endfor %}
+        </div>
+        
     </div>
 </body>
     <script src='https://unpkg.com/akar-icons-fonts'></script>
