--- a/07.Python_Web/07.01.Django_Basics/07.01.01.Labs/forumApp/templates/posts/search-form.html
+++ b/07.Python_Web/07.01.Django_Basics/07.01.01.Labs/forumApp/templates/posts/search-form.html
@@ -1,3 +1,6 @@
+{#{% load crispy_forms_tags %}#}
+{#{% crispy form form.helper %}#}
+
 <form class="search-bar" action="{% url 'dash' %}" method="get">
     {{ form }}
     <button>
