--- a/07.Python_Web/07.01.Django_Basics/07.01.01.Labs/forumApp/staticfiles/css/forms.css
+++ b/07.Python_Web/07.01.Django_Basics/07.01.01.Labs/forumApp/staticfiles/css/forms.css
@@ -49,40 +49,40 @@ form input[type="submit"]:hover {
 
 /* CSS */
 .button-9 {
-      appearance: button;
-      backface-visibility: hidden;
-      background-color: #405cf5;
-      border-radius: 6px;
-      border-width: 0;
-      box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset,rgba(50, 50, 93, .1) 0 2px 5px 0,rgba(0, 0, 0, .07) 0 1px 1px 0;
-      box-sizing: border-box;
-      color: #fff;
-      cursor: pointer;
-      font-family: -apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Ubuntu,sans-serif;
-      font-size: 100%;
-      height: 44px;
-      line-height: 1.15;
-      margin: 12px 0 0;
-      outline: none;
-      overflow: hidden;
-      padding: 0 25px;
-      position: relative;
-      text-align: center;
-      text-transform: none;
-      transform: translateZ(0);
-      transition: all .2s,box-shadow .08s ease-in;
-      user-select: none;
-      -webkit-user-select: none;
-      touch-action: manipulation;
-      width: 100%;
+    appearance: button;
+    backface-visibility: hidden;
+    background-color: #405cf5;
+    border-radius: 6px;
+    border-width: 0;
+    box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset, rgba(50, 50, 93, .1) 0 2px 5px 0, rgba(0, 0, 0, .07) 0 1px 1px 0;
+    box-sizing: border-box;
+    color: #fff;
+    cursor: pointer;
+    font-family: -apple-system, system-ui, "Segoe UI", Roboto, "Helvetica Neue", Ubuntu, sans-serif;
+    font-size: 100%;
+    height: 44px;
+    line-height: 1.15;
+    margin: 12px 0 0;
+    outline: none;
+    overflow: hidden;
+    padding: 0 25px;
+    position: relative;
+    text-align: center;
+    text-transform: none;
+    transform: translateZ(0);
+    transition: all .2s, box-shadow .08s ease-in;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    width: 100%;
 }
 
 .button-9:disabled {
-  cursor: default;
+    cursor: default;
 }
 
 .button-9:focus {
-  box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset, rgba(50, 50, 93, .2) 0 6px 15px 0, rgba(0, 0, 0, .1) 0 2px 2px 0, rgba(50, 151, 211, .3) 0 0 0 4px;
+    box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset, rgba(50, 50, 93, .2) 0 6px 15px 0, rgba(0, 0, 0, .1) 0 2px 2px 0, rgba(50, 151, 211, .3) 0 0 0 4px;
 }
 
 fieldset {
@@ -125,4 +125,40 @@ legend {
 .radio-select input[type="radio"]:checked + label {
     font-weight: bold;
     color: #007BFF;
+}
+
+.comment-item {
+    display: flex;
+    align-items: flex-start;
+}
+
+.comment-avatar {
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+}
+
+.comment-content {
+    text-align: left;
+    margin-left: 10px;
+    flex: 1;
+}
+
+.comment-author {
+    text-align: left;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+.comment-text {
+    margin: 0;
+}
+
+.form-inline {
+    width: auto;
+    height: auto;
+}
+
+.form-inline div {
+    margin-bottom: 0;
 }
