--- a/07.Python_Web/07.01.Django_Basics/07.01.01.Labs/forumApp/templates/posts/add-post.html
+++ b/07.Python_Web/07.01.Django_Basics/07.01.01.Labs/forumApp/templates/posts/add-post.html
@@ -12,7 +12,7 @@
 {% block content %}
 {{ block.super }}
     <h1>Add Post</h1>
-    <form action="{% url 'add-post' %}" method="post">
+    <form action="{% url 'add-post' %}" method="post" enctype="multipart/form-data">
         {{ form }}
         {% csrf_token %}
         <button class="button-9">Submit</button>
